--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>me.guimy</groupId>
-  <artifactId>jdbc-plugin</artifactId>
+  <artifactId>jdbc-proxy</artifactId>
   <packaging>jar</packaging>
   <version>0.0.1-SNAPSHOT</version>
-  <name>jdbc-plugin</name>
+  <name>jdbc-proxy</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -34,6 +34,7 @@
       <groupId>com.alibaba</groupId>
       <artifactId>druid</artifactId>
       <version>${druid.pool.version}</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
